# gerardocordero.dev

./: .eslintcache  .gitignore  .mcp.json  ANCHORED_SUMMARY.md  CLAUDE.md  DEPLOY.md  README.md  dependencies.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  release.yml
Courses/BackendConNode/: .gitignore
Courses/TypeScriptBeginners/: 12-typeof-narrowing.problem.ts  15-intersection.problem.ts  16-omit-and-pick.problem.ts  5-types-to-variables.problems.ts  9-promises.problems.ts
InterviewPrep/: usefulRegex.md
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: d59b73583987_initial_schema.py
apps/backend/app/: config.py  data.py  db.py  deps.py  main.py  models_db.py  schemas.py  security.py  seed.py
apps/backend/app/assistant/: graph.py  intent.py  rag.py
apps/backend/app/routers/: assistant.py  auth.py  bookings.py  live.py  payments.py  pets.py  waitlist.py  walkers.py
apps/backend/docs/: API-CONTRACT.md  ARCHITECTURE.md  DEPLOY.md
apps/backend/tests/: conftest.py  test_api.py  test_availability.py  test_rag_eval.py  test_stats_waitlist.py
docs/: compass_artifact_wf-068a84e6-c62d-4ba7-8eb6-819160b6059b_text_markdown.md  node-content-todo.md
public/: index.html  manifest.json  manifest.webmanifest  worker.js
scripts/: bilingualify-prep.mjs
server/: package.json
server-node-concepts/: package.json
src/: App.tsx  i18n.js  index.css  index.tsx
(+1181 files in other folders)
