[project]
name = "pawwalk-backend"
version = "0.1.0"
description = "PawWalk API — the FastAPI reference app extracted from the PawWalk Academy Python course."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "pyjwt>=2.9",
    "pwdlib[bcrypt]>=0.2",
    "stripe>=11.0",
    "pydantic-ai-slim[openai]>=0.0.14",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
